# backend-assignment

./: README.md  pyproject.toml  requirements.txt
app/api/: deps.py  routes.py
app/core/: config.py  rate_limit.py  security.py
app/db/: mongodb.py
app/schemas/: users.py
app/services/: auth_service.py  iot_service.py  user_service.py  ws_manager.py
iot_data_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
