[project]
name = "iot-data-service"
version = "0.1.0"
description = "Generic IoT data ingestion and streaming service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "motor>=3.5.0,<4.0.0",
  "pymongo>=4.8.0,<5.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt==4.0.1",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
